--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,16 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-
-body{
-	margin: 0;
-	padding: 0;
-	font-family:'Josefin Sans';
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Josefin Sans';
 }
 
 .menu {
-	font-size: 30px;
-	list-style: none;
+    margin-top: 0;
+    font-size: 25px;
+    list-style: none;
+    font-weight: bold;
+    padding: 25px 30px 50px 30px;
+    background-color: #1E90FF;
 }
-li {
-	padding-right: 20px;
-	float: left;
+
+a {
+    text-decoration: none;
+    color: #FF8C00;
+    padding-right: 20px;
+    float: left;
+}
+
+#sobre {
+    float: right;
+    color: white;
+    position: relative;
+    background-color: #FF8C00;
+}
+
+#cadastro {
+    float: right;
 }
