--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -5,22 +5,82 @@ body {
     font-family: 'Josefin Sans';
 }
 
+
+/* Menu início */
+
 nav {
     background-color: #1E90FF;
-    padding: 30px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.295) 3px 3px 10px 3px;
 }
 
 a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
     float: left;
     text-decoration: none;
-    margin-right: 10px;
+    margin-right: 30px;
     color: #F46324;
+    font-size: 25px;
+    border: #F46324 3px solid;
+    padding: 10px 5px 5px 5px;
+}
+
+a:hover {
+    font-weight: bolder;
+    transition: 0.5s;
+    color: white;
+    border: white 3px solid;
 }
 
 #sobre {
+    display: flex;
+    align-items: center;
     background-color: #F46324;
     color: white;
-    padding: 5px;
+    padding: 10px 10px 7px 10px;
+    border-radius: 5px;
+    border: #F46324 3px solid;
 }
+
+.cadastro {
+    margin-right: 20px;
+}
+
+#usuario {
+    float: left;
+    height: 30px;
+    width: 30px;
+    margin-right: 5px;
+}
+
+#sobre:hover {
+    color: #F46324;
+    background-color: white;
+    border: white 3px solid;
+}
+
+#logo {
+    color: white;
+    border: white 3px dotted;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+#logo:hover {
+    color: #F46324;
+    border: #F46324 3px dotted;
+}
+
+#logo img {
+    height: 40px;
+    width: 40px;
+}
+
+
+/* Menu fim */
