--- a/css/styleabout.css
+++ b/css/styleabout.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Josefin Sans';
+    background-color: #F46324;
 }
 
 
@@ -38,6 +39,12 @@ a:hover {
     border: white 3px solid;
 }
 
+#carrinho {
+    height: 25px;
+    width: 25px;
+    margin-right: 5px;
+}
+
 #sobre {
     display: flex;
     align-items: center;
@@ -50,6 +57,7 @@ a:hover {
 
 .cadastro {
     margin-right: 20px;
+    padding-top: 8px;
 }
 
 #usuario {
@@ -87,26 +95,32 @@ a:hover {
 
 .criadores {
     margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     text-align: center;
-    margin-left: 40px;
+    justify-content: space-evenly;
 }
 
 .criadores img {
-    height: 350px;
-    width: 370px;
-    border: 10px solid;
-    border-color: lightseagreen;
-    border-radius: 200px;
-    box-shadow: 3px 3px 10px 3px rgb(7, 53, 80);
+    border: #1E90FF 15px double;
+    height: 410px;
+    width: 350px;
+    box-shadow: 3px 3px 10px 3px rgba(0, 0, 0, 0.33);
 }
 
-.criadores p {
-    color: lightseagreen;
+summary {
+    margin-top: 20px;
+    color: white;
     font-weight: bold;
     font-size: 30px;
+    cursor: pointer;
 }
 
-.raissa {
-    margin-left: 50px;
+.caracteristicas {
+    display: flex;
+    font-size: 17px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 3px 3px 10px 3px rgba(0, 0, 0, 0.218);
 }
