--- a/css/styleinnovations.css
+++ b/css/styleinnovations.css
@@ -38,6 +38,12 @@ a:hover {
     border: white 3px solid;
 }
 
+#carrinho {
+    height: 25px;
+    width: 25px;
+    margin-right: 5px;
+}
+
 #sobre {
     display: flex;
     align-items: center;
@@ -50,6 +56,7 @@ a:hover {
 
 .cadastro {
     margin-right: 20px;
+    padding-top: 8px;
 }
 
 #usuario {
