--- a/css/styleperiféricos.css
+++ b/css/styleperiféricos.css
@@ -92,3 +92,83 @@ a:hover {
 
 
 /* Menu fim */
+
+#catalogo {
+    justify-content: center;
+    display: flex;
+    margin: auto;
+}
+
+.card {
+    margin-top: 20px;
+    margin-left: 20px;
+    background-color: #FFFFFF;
+    width: 220px;
+    height: 400px;
+    border-radius: 12px;
+    box-shadow: 4px 4px 12px 0px #aaaa;
+}
+
+.card img {
+    width: 100%;
+    height: 180px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.card div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    height: 50%;
+}
+
+.card h1 {
+    font-size: 16px;
+}
+
+.card button {
+    background-color: rgb(255, 60, 0);
+    color: #fff;
+    height: 30px;
+    border: none;
+    padding: 4px;
+    width: 90%;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+.card button:hover {
+    background-color: rgb(255, 82, 30);
+    cursor: pointer;
+}
+
+.titulo-destaque {
+    justify-content: center;
+    display: flex;
+}
+
+.img-destaque {
+    justify-content: center;
+    height: 25px;
+    width: 25px;
+}
+
+.destaque {
+    border-width: 4px;
+    border-style: solid;
+    border-color: #F46324;
+    margin-right: 500px;
+    margin-left: 500px;
+    display: flex;
+    justify-content: center;
+}
+
+.destaques {
+    padding: 10px;
+    border: 2px solid #F46324;
+    margin: 10px;
+}
